--- a/full-stack-army/DS.E/package.json
+++ b/full-stack-army/DS.E/package.json
@@ -7,12 +7,16 @@
     "lerna": "^6.4.0"
   },
   "workspaces": {
-    "packages" : [
-      "packages/*"
+    "packages": [
+      "packages/*",
+      "playgrounds/*"
     ]
   },
   "private": true,
   "scripts": {
     "build": "yarn lerna run build"
+  },
+  "dependencies": {
+    "create-vite": "^4.0.0"
   }
 }
