--- a/full-stack-army/DS.E/packages/react/package.json
+++ b/full-stack-army/DS.E/packages/react/package.json
@@ -6,6 +6,11 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "react": "^18.2.0",
+    "rollup": "^3.10.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.4"
+  },
+  "scripts": {
+    "build": "rollup -c"
   }
 }
